[tool.poetry]
name = "bigram-language-model"
version = "0.1.0"
description = ""
authors = ["Mkoek213 <mikolaj.kolek2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
torch = "^2.4.1"
numpy = "^2.1.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
